--- a/site/valcheck.html
+++ b/site/valcheck.html
@@ -1,2 +1,10 @@
 <!doctype html>
-<html></html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>im newbie and do my best</title>
+</head>	
+<body>
+Im learning more and i got this!
+</body>
+</html>
