--- a/site/div.span.html
+++ b/site/div.span.html
@@ -7,10 +7,10 @@
 <body>
 <div>***DIV 1: контент тута ***</div>
 <div>***DIV 2: follovs DIV1 ***</div>
-<span>+++ SPAN 1: comes right after DIV 2***</span>
+<span>***SPAN 1: comes right after DIV 2***</span>
 <div>
 	***DIV 3 following span 1
-	<span>*** SPAN 2 stays inside Div 3***</span>
+	<span>*** SPAN 2 stays inside DIV 3***</span>
 </div>
 </body>
 </html>
